--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "Nama Situs Anda"
-description: "Deskripsi singkat tentang situs Anda"
+title: "zulrahmat.github.io"
+description: "Dzulrahmat Blog"
 theme: minima
