--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: "zulrahmat.github.io"
 description: "Dzulrahmat Blog"
-theme: "just-the-docs"
-remote_theme: just-the-docs/just-the-docs
-plugins:
-  - jekyll-remote-theme # pastikan plugin ini diaktifkan
+theme: hacker
+
 
